univention-directory-listener (8.0.0-7) unstable; urgency=low

  * Update copyright (Bug #34355)

 -- Philipp Hahn <hahn@univention.de>  Thu, 03 Apr 2014 16:26:42 +0200

univention-directory-listener (8.0.0-6) unstable; urgency=medium

  * Adjust listener resync shutdown message (Bug #32605)

 -- Arvid Requate <requate@univention.de>  Tue, 08 Apr 2014 18:16:42 +0200

univention-directory-listener (8.0.0-5) unstable; urgency=medium

  * Always run replication handler, fixing boolean logic twist in patch
    for Bug #29475 (Bug #33732)

 -- Arvid Requate <requate@univention.de>  Thu, 19 Dec 2013 13:00:20 +0100

univention-directory-listener (8.0.0-4) unstable; urgency=low

  * Update/review UCR variable descriptions (Bug #30946)

 -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Tue, 24 Sep 2013 09:08:46 +0200

univention-directory-listener (8.0.0-3) unstable; urgency=low

  * Update/review UCR variable descriptions (Bug #30946)

 -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Fri, 20 Sep 2013 11:55:48 +0200

univention-directory-listener (8.0.0-2) unstable; urgency=low

  * Update copyright years for 2013
  * Update/review UCR variable descriptions (Bug #30946)
    Remove univention-directory-listener.univention-config-registry-categories,
      already covered in univention-base-files

 -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Wed, 11 Sep 2013 12:04:26 +0200

univention-directory-listener (8.0.0-1) unstable; urgency=low

  * Bump version for UCS-3.2.
  * Hide password in debug message (Bug #31053)

 -- Philipp Hahn <hahn@univention.de>  Tue, 25 Jun 2013 07:28:58 +0200

univention-directory-listener (7.0.8-1) unstable; urgency=low

  * respect listener/debug/level in join script (Bug #30154) 

 -- Felix Botner <botner@univention.de>  Fri, 01 Mar 2013 15:00:19 +0100

univention-directory-listener (7.0.7-2) unstable; urgency=low

  * fix missing parenthesis (Bug #29475)

 -- Arvid Requate <requate@univention.de>  Mon, 18 Feb 2013 13:26:54 +0100
